src/test/ui/parser/issue-33413.stderr
error: expected parameter name, found `*`
  --> $DIR/issue-33413.rs:4:10
   |
LL |     fn f(*, a: u8) -> u8 {}
   |          ^ expected parameter name

error: aborting due to previous error

